--- a/html/views/overlay/admin/index.html
+++ b/html/views/overlay/admin/index.html
@@ -15,7 +15,9 @@
 			<h2>Elements</h2>
 			<button data-key="C" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Clock)" class="ToggleSwitch">Clock [C]</button> 
 			<button data-key="S" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Score)" class="ToggleSwitch">Score [S]</button>
-			<button data-key="J" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.ShowJammers)" class="ToggleSwitch">Jammers [J]</button><br/>
+			<button data-key="J" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.ShowJammers)" class="ToggleSwitch">Jammer Names [J]</button><br/>
+			<button data-key="L" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.ShowLineups)" class="ToggleSwitch">Lineups [L]</button><br/>
+			<button data-key="N" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.ShowAllNames)" class="ToggleSwitch">All Names [N]</button><br/>
 		</p>
 
 		<p id="Panel">
@@ -28,7 +30,7 @@
 				<option data-key="3" value="PenaltyTeam1">Penalty (T1) [3]</option>
 				<option data-key="4" value="PenaltyTeam2">Penalty (T2) [4]</option>
 				<option data-key="9" value="LowerThird" data-form=".ExtraFormLower">Lower Third [9]</option>
-				<option data-key="N" value="Upcoming">Upcoming [n]</option>
+				<option data-key="U" value="Upcoming">Upcoming [U]</option>
 			</select>
 
 
@@ -82,7 +84,7 @@
 
 	</div>
 	<div id="Preview">
-		<iframe src="../index.html" style="border: 3px solid black; margin: 10px; width: 1080px; height: 720px; ">
+		<iframe src="../index.html">
 		</iframe>
 	</div>
 
