--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -38,11 +38,35 @@
             </div>
             <div class="JammerWrapper">
               <div class="JammerBox ShowInJam Clock ColourTeam1">
-                <div
-                  class="JammerName VerticalCenter Box"
-                  sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam"
-                  sbModify="jammer_ov"
-                ></div>
+                <div class="Jammer VerticalCenter Box">
+                  <div class="Name" sbDisplay="Position(Jammer).Name"></div>
+                  <div class="Number" sbDisplay="Position(Jammer).RosterNumber"></div>
+                  <div class="Penalties" sbDisplay="Position(Jammer).CurrentPenalties"></div>
+                </div>
+                <div class="Border"></div>
+                <div class="Pivot VerticalCenter Box">
+                  <div class="Name" sbDisplay="Position(Pivot).Name"></div>
+                  <div class="Number" sbDisplay="Position(Pivot).RosterNumber"></div>
+                  <div class="Penalties" sbDisplay="Position(Pivot).CurrentPenalties"></div>
+                </div>
+                <div class="Border"></div>
+                <div class="Blocker1">
+                  <div class="Name" sbDisplay="Position(Blocker1).Name"></div>
+                  <div class="Number" sbDisplay="Position(Blocker1).RosterNumber"></div>
+                  <div class="Penalties" sbDisplay="Position(Blocker1).CurrentPenalties"></div>
+                </div>
+                <div class="Border"></div>
+                <div class="Blocker2">
+                  <div class="Name" sbDisplay="Position(Blocker2).Name"></div>
+                  <div class="Number" sbDisplay="Position(Blocker2).RosterNumber"></div>
+                  <div class="Penalties" sbDisplay="Position(Blocker2).CurrentPenalties"></div>
+                </div>
+                <div class="Border"></div>
+                <div class="Blocker3">
+                  <div class="Name" sbDisplay="Position(Blocker3).Name"></div>
+                  <div class="Number" sbDisplay="Position(Blocker3).RosterNumber"></div>
+                  <div class="Penalties" sbDisplay="Position(Blocker3).CurrentPenalties"></div>
+                </div>
               </div>
             </div>
           </div>
@@ -63,11 +87,35 @@
             </div>
             <div class="JammerWrapper">
               <div class="JammerBox ShowInJam Clock ColourTeam2">
-                <div
-                  class="JammerName VerticalCenter Box"
-                  sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam"
-                  sbModify="jammer_ov"
-                ></div>
+                <div class="Jammer VerticalCenter Box">
+                  <div class="Name" sbDisplay="Position(Jammer).Name"></div>
+                  <div class="Number" sbDisplay="Position(Jammer).RosterNumber"></div>
+                  <div class="Penalties" sbDisplay="Position(Jammer).CurrentPenalties"></div>
+                </div>
+                <div class="Border"></div>
+                <div class="Pivot VerticalCenter Box">
+                  <div class="Name" sbDisplay="Position(Pivot).Name"></div>
+                  <div class="Number" sbDisplay="Position(Pivot).RosterNumber"></div>
+                  <div class="Penalties" sbDisplay="Position(Pivot).CurrentPenalties"></div>
+                </div>
+                <div class="Border"></div>
+                <div class="Blocker1">
+                  <div class="Name" sbDisplay="Position(Blocker1).Name"></div>
+                  <div class="Number" sbDisplay="Position(Blocker1).RosterNumber"></div>
+                  <div class="Penalties" sbDisplay="Position(Blocker1).CurrentPenalties"></div>
+                </div>
+                <div class="Border"></div>
+                <div class="Blocker2">
+                  <div class="Name" sbDisplay="Position(Blocker2).Name"></div>
+                  <div class="Number" sbDisplay="Position(Blocker2).RosterNumber"></div>
+                  <div class="Penalties" sbDisplay="Position(Blocker2).CurrentPenalties"></div>
+                </div>
+                <div class="Border"></div>
+                <div class="Blocker3">
+                  <div class="Name" sbDisplay="Position(Blocker3).Name"></div>
+                  <div class="Number" sbDisplay="Position(Blocker3).RosterNumber"></div>
+                  <div class="Penalties" sbDisplay="Position(Blocker3).CurrentPenalties"></div>
+                </div>
               </div>
             </div>
           </div>
