--- a/html/components/team-time-tab.css
+++ b/html/components/team-time-tab.css
@@ -1,5 +1,5 @@
 
-.MetaControl .clickMe { color: black; background: #ff9010; } 
+#TeamTime .clickMe { color: black; background: #ff9010; } 
 .MetaControl .ui-button.ui-state-active { color: black; background: #0c0; } 
 
 /* Key Control */
