--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -142,7 +142,11 @@
               sbDisplay="Time"
               sbModify="toTime"
             ></div>
-            <div class="Box BoxLarge TextCenter Time Clock ShowInIntermission" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
+            <div
+              class="Box BoxLarge TextCenter Time Intermission Clock ShowInIntermission"
+              sbDisplay="Clock(Intermission).Time"
+              sbModify="toTime"
+            ></div>
             <div class="Box TextRight Time Clock Show ShowInJam" sbContext="Clock(Jam)" sbDisplay="Time" sbModify="toTime"></div>
             <div class="Box TextRight Time Clock ShowInLineup" sbContext="Clock(Lineup)" sbDisplay="Time" sbModify="toTime"></div>
             <div class="Box TextRight Time Clock ShowInTimeout" sbContext="Clock(Timeout)" sbDisplay="Time" sbModify="toTime"></div>
