--- a/html/views/copy/index.html
+++ b/html/views/copy/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Copy to Statsbook</title>
+    <title>Copy to Statsbook | CRG ScoreBoard</title>
     <!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 		
