--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Stream Overlay | CRG ScoreBoard</title>
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
     <script type="text/javascript" src="/json/WS.js"></script>
