--- a/html/components/team-time-tab.css
+++ b/html/components/team-time-tab.css
@@ -1,6 +1,6 @@
 
 #TeamTime .clickMe { color: black; background: #ff9010; } 
-.MetaControl .ui-button.ui-state-active { color: black; background: #0c0; } 
+.MetaControl .ui-button.ui-state-active, .MetaControl .ui-button.Active { color: black; background: #0c0; } 
 
 /* Key Control */
 .KeyControl span.Indicator { font-size: 75%; } 
