--- a/html/components/team-time-tab.css
+++ b/html/components/team-time-tab.css
@@ -37,7 +37,7 @@
 #TeamTime table.Team>tbody>tr>td { width: 50%; } 
 #TeamTime table.Team tr.Name td.Name div { max-height: 100px; max-width: 300px; overflow: hidden; font-size: 150%; } 
 #TeamTime table.Team tr.Name td.Name div a.AlternateName { display: none; } 
-#TeamTime table.Team tr.Name td.Logo img { height: 50px; vertical-align: middle; } 
+#TeamTime table.Team tr.Name td.Logo img { height: 50px; max-width: 200px; vertical-align: middle; } 
 #TeamTime table.Team tr.Score td.Score a { font-size: 300%; } 
 #TeamTime table.Team tr.Score td a.TripScore { font-size: 150%; } 
 #TeamTime table.Team tr.Score td a.JamScore { font-size: 150%; } 
