--- a/html/views/overlay/admin/index.html
+++ b/html/views/overlay/admin/index.html
@@ -75,11 +75,11 @@
 			<h2>Team Display</h2>
 			<label>1 - Name/FG/BG</label>
 			<input data-setting="ScoreBoard.CurrentGame.Team(1).AlternateName(overlay)" type="text"/><br/>
-			<input data-setting="ScoreBoard.CurrentGame.Team(1).Color(overlay_fg)" type="color" cleared="true" value="#666666"/><button class="ClearPrev">X</button></br>
+			<input data-setting="ScoreBoard.CurrentGame.Team(1).Color(overlay_fg)" type="color" cleared="true" value="#FFFFFF"/><button class="ClearPrev">X</button></br>
 			<input data-setting="ScoreBoard.CurrentGame.Team(1).Color(overlay_bg)" type="color" cleared="true" value="#666666"/><button class="ClearPrev">X</button></br>
 			<label>2 - Name/FG/BG</label>
 			<input data-setting="ScoreBoard.CurrentGame.Team(2).AlternateName(overlay)" type="text"/><br/>
-			<input data-setting="ScoreBoard.CurrentGame.Team(2).Color(overlay_fg)" type="color" cleared="true" value="#666666"/><button class="ClearPrev">X</button></br>
+			<input data-setting="ScoreBoard.CurrentGame.Team(2).Color(overlay_fg)" type="color" cleared="true" value="#FFFFFF"/><button class="ClearPrev">X</button></br>
 			<input data-setting="ScoreBoard.CurrentGame.Team(2).Color(overlay_bg)" type="color" cleared="true" value="#666666"/><button class="ClearPrev">X</button></br>
 		</div>
 
