--- a/html/components/sk-sheet.css
+++ b/html/components/sk-sheet.css
@@ -3,7 +3,7 @@ table.SK, .SK .table, .SK tr, .SK td, #TripEditor table, #TripEditor tr, #TripEd
 body:not(.AllowSelect) .SK { user-select: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -o-user-select: none; } 
 .SK tr { color: #333; } 
 .SK .Hide { display: none; } 
-.SK.Period { width: 98%; table-layout:fixed; margin: 1%; } 
+.SK.Period { width: 98%; table-layout:fixed; margin: 0.5em 1%; } 
 .SK.Period thead td { font-size: 95%; background-color: #cccccc; color: #333333; } 
 .SK.Period .SmallHead>div { font-size: 75%; transform: rotate(270deg); } 
 .SK.Period td { text-align: center; vertical-align: middle; } 
@@ -19,7 +19,7 @@ body:not(.AllowSelect) .SK { user-select: none; -webkit-user-select: none; -khtm
 .SK.Period .Overtime .JamNumber::after { font-size: 50%; content: "OT"; vertical-align: top; padding-left: 1px; } 
 .SK.Period .Jammer { width: 50px; } 
 .SK.Period .Narrow, .Period .SmallHead { width: 14px; } 
-.SK.Period #head { font-size: 200%; } 
+.SK.Period #head { font-size: calc(200% - 1px); } 
 .SK.Period .Trip, .Period .JamTotal, .Period .GameTotal { width: 9%; } 
 .SK.Period .GameTotal, .SK.Period .JamTotal,.SK.Period .Lost, .SK.Period .Trip2 { border-left-width: 2px; } 
 .SK.Period tr .GameTotal { background-color: #d3ecb6; } 
