--- a/html/views/standard/index.css
+++ b/html/views/standard/index.css
@@ -9,7 +9,7 @@ user-select: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-s
 .DisplayPane {opacity: 0;position: absolute;left: 0; top: 0;width: 100%;height: 100%; } 
 .DisplayPane.Hide {animation: HidePanel 1s;-moz-animation: HidePanel 1s;-webkit-animation: HidePanel 1s; } 
 .DisplayPane.Show {animation: ShowPanel 1s;-moz-animation: ShowPanel 1s;-webkit-animation: ShowPanel 1s;opacity: 1; } 
-.DisplayPane>.object {width: 100%;height: 100%;scrolling: no; frameborder: 0px; border: 0px; } 
+.DisplayPane>.object {width: 100%;height: 100%;scrolling: no; frameborder: 0px; border: 0px; object-fit: contain; } 
 @-moz-keyframes ShowPanel { 
  0% { opacity: 0; } 100% { opacity: 1; } 
  } 
