Fix whiteboard display being stacked on some browsers

--- a/html/views/wb/index.html
+++ b/html/views/wb/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div id="gameAdvance"></div>
-    <div id="pt1" style="width: calc(50% - 2px); vertical-align: top; display: inline-block"></div>
+    <div id="pt1" style="width: 50%; float: left"></div>
     <!-- 
 	 -->
-    <div id="pt2" style="width: calc(50% - 2px); vertical-align: top; display: inline-block"></div>
+    <div id="pt2" style="width: 50%; float: left"></div>
   </body>
 </html>
